Algumas refatorações e adição do botão de MENU