@@ -17,3 +17,9 @@ public class FormEasyProjectApplication {
 	}
 
 }
+
+/* 
+ * java --module-path "C:\Program Files\Java\javafx-sdk-22.0.2\lib" 
+ * --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web 
+ * -jar formeasyproject02.jar
+ */
